Upgrade project JDK to JDK23 and Spring Boot version 3.4.2
- Ensure every file ends with a line break
- Change @Value class to Java record
- Change deprecated @MockBean to @MockitoBean