@@ -1,15 +1,14 @@
 package com.chuckboliver.bookservice.book;
 
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotEmpty;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
-import javax.validation.Valid;
-import javax.validation.constraints.NotEmpty;
 import java.time.chrono.ThaiBuddhistDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Validated
 @RestController
@@ -35,7 +34,7 @@ public class BookController {
                         v.getAuthor(),
                         v.getPublishedDate() != null ? ThaiBuddhistDate.from(v.getPublishedDate()) : null
                 ))
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(booksDto);
     }
 
