@@ -1,7 +1,8 @@
 package com.chuckboliver.bookservice.common;
 
+import jakarta.validation.ConstraintViolationException;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -9,9 +10,7 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
-import javax.validation.ConstraintViolationException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class DefaultExceptionHandler extends ResponseEntityExceptionHandler {
@@ -24,7 +23,7 @@ public class DefaultExceptionHandler extends ResponseEntityExceptionHandler {
                         violation.getInvalidValue(),
                         violation.getMessage())
                 )
-                .collect(Collectors.toList());
+                .toList();
 
         ValidationErrorResponse errorResponse = new ValidationErrorResponse(errorDetails);
 
@@ -32,7 +31,7 @@ public class DefaultExceptionHandler extends ResponseEntityExceptionHandler {
     }
 
     @Override
-    protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+    protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
         List<ValidationErrorResponse.ErrorDetail> errorDetails = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
@@ -41,7 +40,7 @@ public class DefaultExceptionHandler extends ResponseEntityExceptionHandler {
                         fieldError.getRejectedValue(),
                         fieldError.getDefaultMessage()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
         ValidationErrorResponse errorResponse = new ValidationErrorResponse(errorDetails);
 
